--- a/templates/etc/ssh/sshd_config.j2
+++ b/templates/etc/ssh/sshd_config.j2
@@ -20,8 +20,9 @@ HostKey {{ ssh_server_host_key }}
 UsePrivilegeSeparation {{ 'yes' if ssh_server_use_privilege_separation else 'no' }}
 
 # Lifetime and size of ephemeral version 1 server key
-KeyRegenerationInterval {{ ssh_server_key_regeneration_interval }}
-ServerKeyBits {{ ssh_server_server_key_bits }}
+## Deprecated and causes validation error in Debian 9 stretch
+# KeyRegenerationInterval {{ ssh_server_key_regeneration_interval }}
+# ServerKeyBits {{ ssh_server_server_key_bits }}
 
 # Logging
 SyslogFacility {{ ssh_server_syslog_facility }}
@@ -32,14 +33,16 @@ LoginGraceTime {{ ssh_server_login_grace_time }}
 PermitRootLogin {{ ssh_server_permit_root_login }}
 StrictModes {{ 'yes' if ssh_server_strict_modes else 'no' }}
 
-RSAAuthentication {{ 'yes' if ssh_server_rsa_authentication else 'no' }}
+## Deprecated in Debian 9 stretch
+#RSAAuthentication {{ 'yes' if ssh_server_rsa_authentication else 'no' }}
 PubkeyAuthentication {{ 'yes' if ssh_server_pubkey_authentication else 'no' }}
 AuthorizedKeysFile {{ ssh_server_authorized_keys_file }}
 
 # Don't read the user's ~/.rhosts and ~/.shosts files
 IgnoreRhosts {{ 'yes' if ssh_server_ignore_rhosts else 'no' }}
 # For this to work you will also need host keys in /etc/ssh_known_hosts
-RhostsRSAAuthentication {{ 'yes' if ssh_server_rhosts_rsa_authentication else 'no' }}
+## Deprecated in Debian 9 stretch
+#RhostsRSAAuthentication {{ 'yes' if ssh_server_rhosts_rsa_authentication else 'no' }}
 # similar for protocol version 2
 HostbasedAuthentication {{ 'yes' if ssh_server_hostbased_authentication else 'no' }}
 # Uncomment if you don't trust ~/.ssh/known_hosts for RhostsRSAAuthentication
